Reworked project structure

--- a/adventOfCodeJava/.project
+++ b/adventOfCodeJava/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>adventOfCode2018</name>
+	<name>AdventOfCodeJava</name>
 	<comment></comment>
 	<projects>
 	</projects>
